testdata/baselines/reference/submodule/conformance/jsdocImportTypeReferenceToStringLiteral.errors.txt
a.js(1,26): error TS2694: Namespace '""b.js""' has no exported member 'FOO'.


==== b.js (0 errors) ====
    export const FOO = "foo";
    
==== a.js (1 errors) ====
    /** @type {import('./b').FOO} */
                             ~~~
!!! error TS2694: Namespace '""b.js""' has no exported member 'FOO'.
    let x;
    